...

  useLayoutEffect(() => {
    props.navigation.setOptions(({
      headerRight: () => (
        <View style={{ flex: 1, flexDirection: "row", marginRight: 10 }}>
          <Button onClick={onAddItemButtonPressed} text="+" textStyle={styles.btnAdd} testID="btnAdd" />
          {/* 这个"&#8921;"就是">>>"的字样 */}
          <Button onClick={onShowCaseButtonPressed} text="&#8921;" textStyle={styles.btnAdd} testID="btnShowcase" />
          <Button onClick={onLogin} text="网" textStyle={styles.btnAdd} testID="btnLogin" />
        </View>
      )
    }));
  });
...
